--- a/index.html
+++ b/index.html
@@ -82,38 +82,46 @@
 
 
 
-<div class="extra-info">
+            <div class="extra-info">
 
-    <div class="extra-box">
-        <img src="/img/nicholas-doherty-pONBhDyOFoM-unsplash.jpg" alt="">
-        <div class="content">
-        <h4>Two Column Left Side</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus
-            sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in
-            leo sit amet velit finibus pretium.</p>
-        <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt
-            massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in
-            blandit metus.</p>
+                <div class="extra-box">
+                    <img src="/img/nicholas-doherty-pONBhDyOFoM-unsplash.jpg" alt="">
+                    <div class="content">
+                        <h4>Two Column Left Side</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus,
+                            ut cursus
+                            sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit.
+                            Sed in
+                            leo sit amet velit finibus pretium.</p>
+                        <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed
+                            tincidunt
+                            massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna,
+                            in
+                            blandit metus.</p>
+                    </div>
+                </div>
+
+                <div class="extra-box">
+                    <img src="/img/nicholas-doherty-pONBhDyOFoM-unsplash.jpg" alt="">
+
+                    <div class="content">
+                        <h4>Two Column Right Side</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus,
+                            ut cursus
+                            sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit.
+                            Sed in
+                            leo sit amet velit finibus pretium.</p>
+                        <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed
+                            tincidunt
+                            massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna,
+                            in
+                            blandit metus.</p>
+                        <button>Read More</button>
+                    </div>
+
+                </div>
+
             </div>
-    </div>
-
-<div class="extra-box">
-    <img src="/img/nicholas-doherty-pONBhDyOFoM-unsplash.jpg" alt="">
-    
-    <div class="content">
-    <h4>Two Column Right Side</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus
-        sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in
-        leo sit amet velit finibus pretium.</p>
-    <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt
-        massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in
-        blandit metus.</p>
-        <button>Read More</button>
-        </div>
-        
-</div>
-
-</div>
         </div>
 
     </section>
