--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
 
         <div class="contact-text">
               <h2>Contact Form</h2>
-              <!--<p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
+              <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
                   felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
-                  Etiam a mi quis arcu varius condimentum.</p>-->
+                  Etiam a mi quis arcu varius condimentum.</p>
           </div>
   
         <form class="form-area">
