--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conquer Website Clone</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="top-bar">
-        <!--<div class="logo">Logo</div>-->
+     
         <div class="menu">
             <ul>
 
@@ -25,8 +25,8 @@
     <div class="banner">
         <div class="banner-text">
             <div class="banner-text-items">
-                <h2>Conquer</h2>
-                <h3>Conquer Website Clone</h3>
+                <h1>Conquer</h1>
+                <h2>Conquer Website Clone</h2>
             </div>
         </div>
     </div>
@@ -186,15 +186,15 @@
 
                 <div class="details-area">
 
-                    <input type="text" name="" id="name" placeholder="Name" required>
+                    <input type="text" name="" id="name" placeholder="Name" autocomple="off" required>
 
 
-                    <input type="email" name="" id="name" placeholder="Email">
+                    <input type="email" name="" id="name" placeholder="Email" autocomplete="off" required>
 
 
-                    <input type="text" name="" id="name" placeholder="Subject">
+                    <input type="text" name="" id="name" placeholder="Subject" autocomplete="off" required>
 
-                    <button type="submit">Submit</button>
+                    <button type="submit">Send</button>
                 </div>
 
             </form>
@@ -204,41 +204,6 @@
 
 
 
-    </section <!--<div class="main-content">
-    <!--- <div class="main1">
-            <h2>Main Heading</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, harum. Minus dicta obcaecati
-                accusantium nulla quidem? Voluptatem nulla quam nobis omnis soluta. Aspernatur facere repudiandae
-                delectus magni, eos laudantium sed.</p>
-        </div>
-
-        <div class="main1">
-            <h2>Main Heading Two</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, harum. Minus dicta obcaecati
-                accusantium nulla quidem? Voluptatem nulla quam nobis omnis soluta. Aspernatur facere repudiandae
-                delectus magni, eos laudantium sed.</p>
-        </div>
-
-        <div class="main1">
-            <h2>Main Heading Three</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, harum. Minus dicta obcaecati
-                accusantium nulla quidem? Voluptatem nulla quam nobis omnis soluta. Aspernatur facere repudiandae
-                delectus magni, eos laudantium sed.</p>
-        </div>
-    </div>-->
-
-
-    <!--<div class="contact">
-        <div class="contact-text">
-            <div class="contact-items">
-                <h2>Contact Us</h2>
-                <input type="text" placeholder="Your name..">
-                <input type="text" placeholder="Your email...">
-                <textarea name="message" id="" cols="20" rows="20" placeholder="Your message..."></textarea>
-                <button>Submit</button>
-            </div>
-        </div>
-    </div>-->
 </body>
 
 </html>
