--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="top-bar">
      
-        <div class="menu">
+        <nav class="menu">
             <ul>
 
                 <li><a href="#home">Home</a></li>
@@ -19,7 +19,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </div>
+        </nav>
     </div>
 
     <div class="banner">
