--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="menu">
             <ul>
 
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Homepage</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
