something went wrong

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="top-bar">
+    <!--<div class="top-bar">
      
         <nav class="menu">
             <ul>
@@ -20,7 +20,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-    </div>
+    </div>-->
 
     <div class="banner">
         <div class="banner-text">
