--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!--<div class="top-bar">
+    <div class="top-bar">
      
         <nav class="menu">
             <ul>
@@ -20,7 +20,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-    </div>-->
+    </div>
 
     <div class="banner">
         <div class="banner-text">
@@ -100,14 +100,14 @@
         </div>
     </section>
 
-    <section id="services">
+  <!---  <section id="services">
 
         <!--<div class="service-banner"></div>-->
 
-        <div class="service-wrapper">
+       <!--- <div class="service-wrapper">
 
             <!--Section cards-->
-            <div class="service-card">
+           <!--- <div class="service-card">
 
                 <img src="/img/benjamin-bindewald-lCW7Jg4Ivyo-unsplash.jpg" alt="Iceberg">
 
@@ -198,7 +198,8 @@
                 </div>
 
             </form>
-        </div>
+        </div>-
+    </section>-->
 
 
 
