--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <button>Button Red</button>
             </div>
 
-            <div class="extra-cards">
+            <!--<div class="extra-cards">
                 <img src="/img/nicholas-doherty-pONBhDyOFoM-unsplash.jpg" alt="Windmill">
                 <h4>Two Column Left Side</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus,
