trial and error

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <button>Button Red</button>
             </div>
 
-            <!--<div class="extra-cards">
+            <div class="extra-cards">
                 <img src="/img/nicholas-doherty-pONBhDyOFoM-unsplash.jpg" alt="Windmill">
                 <h4>Two Column Left Side</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus,
@@ -100,14 +100,14 @@
         </div>
     </section>
 
-  <!---  <section id="services">
+  <section id="services">
 
-        <!--<div class="service-banner"></div>-->
+        <div class="service-banner"></div>
 
-       <!--- <div class="service-wrapper">
+<div class="service-wrapper">
 
             <!--Section cards-->
-           <!--- <div class="service-card">
+           <div class="service-card">
 
                 <img src="/img/benjamin-bindewald-lCW7Jg4Ivyo-unsplash.jpg" alt="Iceberg">
 
@@ -148,7 +148,7 @@
                 <button>Details</button>
             </div>
 
-            <div class="extra-col">
+            <!--<div class="extra-col">
                 <img src="/img/usgs-k7WetNdaY6A-unsplash.jpg" alt="">
                 <h3>One Big Column</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut
