--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
 
   <section id="services">
 
-        <div class="service-banner"></div>
+        <div class="service-banner">
+            <h3>Our Services</h3>
+            <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
+                felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
+                Etiam a mi quis arcu varius condimentum.</p>
+        </div>
 
 <div class="service-wrapper">
 
