final css styling

--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
   <section id="services">
 
         <div class="service-banner">
+        <!---    <div class="service-content">
             <h3>Our Services</h3>
             <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
                 felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
                 Etiam a mi quis arcu varius condimentum.</p>
+                </div>-->
         </div>
 
 <div class="service-wrapper">
@@ -153,7 +155,7 @@
                 <button>Details</button>
             </div>
 
-            <!--<div class="extra-col">
+            <div class="extra-col">
                 <img src="/img/usgs-k7WetNdaY6A-unsplash.jpg" alt="">
                 <h3>One Big Column</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut
@@ -203,8 +205,8 @@
                 </div>
 
             </form>
-        </div>-
-    </section>-->
+        </div>
+    </section>
 
 
 
