--- a/index.html
+++ b/index.html
@@ -102,15 +102,18 @@
 
   <section id="services">
 
-        <div class="service-banner">
-        <!---    <div class="service-content">
-            <h3>Our Services</h3>
-            <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
-                felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
-                Etiam a mi quis arcu varius condimentum.</p>
-                </div>-->
+    <div class="service-banner">
+        <div class="service-banner-text">
+            <div class="service-banner-text-items">
+                <h3>Our Services</h3>
+                <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
+                    felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
+                    Etiam a mi quis arcu varius condimentum.</p>
+            </div>
         </div>
+    </div>
 
+    
 <div class="service-wrapper">
 
             <!--Section cards-->
