--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav class="menu">
             <ul>
 
-                <li><a href="#home" class="btn active">Homepage</a></li>
-                <li><a href="#about" class="btn">About Us</a></li>
-                <li><a href="#services" class="btn">Services</a></li>
-                <li><a href="#contact" class="btn">Contact</a></li>
+                <li ><a href="#home" class="active">Homepage</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
