--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </form>
            
         </div>
-        <button class="btn">
+        <button class="btn btn-hidden">
         <i class="fas fa-chevron-circle-up"></i>
     </button>
     </section>
@@ -226,6 +226,7 @@
   </footer>
   
 <script src="index.js"></script>
+
 
 </body>
 
