--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <div class="top-bar">
        
         <nav class="menu">
-            <input type="checkbox" id="nav" class="hidden" />
-             <label for="nav" class="nav-btn">
-                 <i></i>
-                 <i></i>
-                 <i></i>
-             </label>
+            <label for="toggle" class="nav-btn">
+                &#9776;
+            </label>
+            <input type="checkbox" id="toggle" class="hidden" />
+         
  
              <div class="nav-wrapper">
              <ul>
