--- a/index.html
+++ b/index.html
@@ -207,9 +207,7 @@
             </div>
 
             <form class="form-area">
-                <div class="message-area">
-                    <textarea name="" id="msg" placeholder="Your message here..."></textarea>
-                </div>
+
 
                 <div class="details-area">
 
@@ -220,6 +218,10 @@
 
 
                     <input type="text" name="" id="name" placeholder="Subject" autocomplete="off" required>
+
+                    <div class="message-area">
+                        <textarea name="" id="msg"  placeholder="Your message here..."></textarea>
+                    </div>
 
                     <button type="submit">Send</button>
                 </div>
@@ -234,7 +236,7 @@
     
 
   <footer>
-   
+   <p>Esther</p> 
   </footer>
   
 <script src="index.js"></script>
