--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
     
 
   <footer>
-   <p>Esther</p> 
+
+   
+   <a href="http://estherboateng.co.uk/" target="_blank">Esther Boateng</a>	&nbsp; <a href="mailto:info@estherboateng.co.uk">Email Me</a> 
   </footer>
   
 <script src="index.js"></script>
