--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="home">
         
-    <div class="banner">
+    <div class="banner sharp">
         <div class="banner-text">
             <div class="banner-text-items">
                 <h1>Conquer</h1>
